[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pymonzo"
description = "Modern Python API client for Monzo public API."
authors = [{name = "Paweł Adamczak", email = "pawel.ad@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["monzo", "api"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dynamic = ["version"]

dependencies = [
  "Authlib",
  "httpx",
  "pydantic-settings",
  "pydantic>2",
  "typing_extensions; python_version<'3.11'",
]

[project.optional-dependencies]
tests = [
  "coverage[toml]",
  "freezegun",
  "polyfactory",
  "pytest",
  "pytest-mock",
  "pytest-recording",
  "python-dotenv",
  "respx",
  "vcrpy-encrypt",
]
docs = [
  "mkdocs",
  "mkdocs-gen-files",
  "mkdocs-include-markdown-plugin",
  "mkdocs-literate-nav",
  "mkdocs-material",
  "mkdocs-section-index",
  "mkdocstrings[python]",
]
dev = [
  "pymonzo[tests,docs]",
  # Code style
  "black",
  "interrogate",
  "isort",
  "ruff",
  # Type checking
  "mypy<1.11.0",  # https://github.com/python/mypy/issues/17535
  "rich",
  # Misc
  "flit",
  "nox",
]

[project.urls]
Homepage = "https://pymonzo.pawelad.dev/"
Documentation = "https://pymonzo.readthedocs.io/"
GitHub = "https://github.com/pawelad/pymonzo"
Issues = "https://github.com/pawelad/pymonzo/issues"

[tool.black]
target-version = ["py38"]

[tool.coverage.run]
branch = true
parallel = true
source = ["src"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
  "if TYPE_CHECKING:",
  # TODO: Test optional `rich` support
  "if RICH_AVAILABLE:",
]

[tool.interrogate]
ignore-init-module = true
ignore-nested-classes = true
fail-under = 95

[tool.isort]
profile = "black"
src_paths = ["src"]

[tool.mypy]
python_version = "3.8"
mypy_path = "src"
plugins = [
  "pydantic.mypy",
]

[[tool.mypy.overrides]]
module = [
  "authlib.integrations.base_client",
  "authlib.integrations.httpx_client",
  "vcr",
  "vcrpy_encrypt",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --import-mode=importlib --verbose"
testpaths = "tests"
pythonpath = "src"

[tool.ruff]
target-version = "py38"

[tool.ruff.lint]
select = [
  "A",  # flake8-builtins
  "ANN",  # flake8-annotations
  "B",  # flake8-bugbear
  "C4",  # flake8-comprehensions
  "C90",  # mccabe
  "D",  # pydocstyle
  "DJ",  # flake8-django
  "E",  # flake8
  "F",  # flake8
  "N",  # pep8-naming
  "PT",  # flake8-pytest-style
  "S",  # flake8-bandit
  "SIM",  # flake8-simplify
  "T20",  # flake8-print
  "TRY",  # tryceratops
  "UP",  # pyupgrade
]
ignore = [
  "A003",  # Class attribute is shadowing a python builtin
  "ANN101",  # ANN101 Missing type annotation for `self` in method
  "ANN102",  # ANN102 Missing type annotation for `cls` in classmethod
  "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed in `**kwargs`
  "D104",  # Missing docstring in public package
  "D106",  # Missing docstring in public nested class
  "N818",  #  Exception name should be named with an Error suffix
  "S101",  # Use of `assert` detected
  "TRY003",  # Avoid specifying long messages outside the exception class
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = true
